[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/HabitatSelector/HabitatSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/AnimalSelector/AnimalSelector.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Main/Main.gd" type="Script" id=3]
[ext_resource path="res://src/PatternDisplay/PatternDisplay.tscn" type="PackedScene" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.152941, 0.462745, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HabitatSelector" parent="HBoxContainer" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 254.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="AnimalSelector" parent="HBoxContainer" instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 258.0
margin_top = 0.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="PatternDisplay" parent="HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 516.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
